<resources>
    <string name="app_name">Landing_SoloLearn</string>
    <string name="explore_n_more">Explore more!!</string>
    <string name="start_learning_n_now">Start Learning Now</string>
    <string name="quizzes">Quizzes</string>
    <string name="join_the_largest_community_of_mobile_code_learners_today">Join the largest community of mobile code learners today</string>
    <string name="everyone_can_code">Everyone Can Code</string>
    <string name="_11_353">11,353</string>
    <string name="lessons">Lessons</string>
    <string name="_1253">1253</string>
    <string name="learners">Learners</string>
    <string name="_22_804_554">22,804,554</string>
    <string name="free_fun_effective_learning_what_can_be_better">Free, fun, effective learning - what can be better?</string>
    <string name="sololearn">sololearn</string>
    <string name="background">background</string>
    <string name="take_a_look_at_app_feature">Take a look at app feature</string>
    <string name="the_language_we_cover">The language we cover</string>
    <string name="start_learning_today">Start Learning Today</string>
    <string name="googleplaystore">googleplayStore</string>
    <string name="appstore">appstore</string>
    <string name="website">website</string>
    <string name="support_language">support language</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
</resources>
